Added documentation to webapi + Changed layout of documentation website

--- a/PokeList_WebApi/Areas/HelpPage/HelpPage.css
+++ b/PokeList_WebApi/Areas/HelpPage/HelpPage.css
@@ -65,7 +65,7 @@
 
 .help-page .sample-header {
     border: 2px solid #D4D4D4;
-    background: #00497E;
+    background: #871c1c;
     color: #FFFFFF;
     padding: 8px 15px;
     border-bottom: none;
