--- a/PokeList_WebApi/Content/Site.css
+++ b/PokeList_WebApi/Content/Site.css
@@ -3,6 +3,11 @@
     padding-bottom: 20px;
 }
 
+.navbar{
+    background: #501c1c;
+    color: white;
+}
+
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
