--- a/PokeList_WebApi/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/PokeList_WebApi/Areas/HelpPage/Views/Help/Index.cshtml
@@ -25,7 +25,7 @@
         <div class="content-wrapper">
             <h2>Introduction</h2>
             <p>
-                Provide a general description of your APIs here.
+                PokeList WebApi is a simple api that return basic information about 1st generation Pokemons.
             </p>
         </div>
     </section>
