--- a/PokeList_WebApi/Views/Shared/_Layout.cshtml
+++ b/PokeList_WebApi/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <link rel="SHORTCUT ICON" type="image/x-icon" href="~/favicon.ico" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
