--- a/SwipeableSplitView_UWP/MainPage.xaml
+++ b/SwipeableSplitView_UWP/MainPage.xaml
@@ -1,12 +1,11 @@
 ﻿<Page
-    x:Class="PokeList_UWP.MainPage"
+    x:Class="SwipeableSplitView_UWP.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:PokeList_UWP"
+    xmlns:local="using:SwipeableSplitView_UWP"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Loaded="Page_Loaded">
+    mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
